Building header and intro

--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
   </head>
   <body>
     <header>
+      <div class="banner-top">
+        <img src="img/bts_banner.jfif" alt="BTS group photo banner" />
+      </div>
       <h1>BTS</h1>
       <h2>방탄소년단</h2>
     </header>
     <section class="intro">
+      <div>
+        <h3>intro</h3>
+        <hr />
+      </div>
       <p>
         <strong>BTS</strong> (Korean: 방탄소년단; Romanization: Bangtan
         Sonyeondan; lit. Bulletproof Boy Scouts), is a South Korean boy band of
