Modifying the sections, added a container div

--- a/index.html
+++ b/index.html
@@ -24,45 +24,54 @@
       <h1>BTS</h1>
       <h2>방탄소년단</h2>
     </header>
-    <section class="intro">
-      <div>
-        <h3>intro</h3>
-        <hr />
-      </div>
-      <p>
-        <strong>BTS</strong> (Korean: 방탄소년단; Romanization: Bangtan
-        Sonyeondan; lit. Bulletproof Boy Scouts), is a South Korean boy band of
-        7 members consisting of <strong>RM</strong>, <strong>Jin</strong>,
-        <strong>Suga</strong>, <strong>J-Hope</strong>, <strong>Jimin</strong>,
-        <strong>V</strong> and <strong>Jungkook</strong>. They debuted on
-        <strong>June 13, 2013</strong> under Big Hit Music (currently part of
-        HYBE Labels) with the lead single 'No More Dream' on album '2 Cool 4
-        Skool'.
-      </p>
+    <div class="container">
+      <section class="intro">
+        <div class="intro-title">
+          <h3>intro</h3>
+          <span class="divider"></span>
+        </div>
+        <p>
+          <strong>BTS</strong> (Korean: 방탄소년단; Romanization: Bangtan
+          Sonyeondan; lit. Bulletproof Boy Scouts), is a South Korean boy band
+          of 7 members consisting of <strong>RM</strong>, <strong>Jin</strong>,
+          <strong>Suga</strong>, <strong>J-Hope</strong>,
+          <strong>Jimin</strong>, <strong>V</strong> and
+          <strong>Jungkook</strong>. They debuted on
+          <strong>June 13, 2013</strong> under Big Hit Music (currently part of
+          HYBE Labels) with the lead single 'No More Dream' on album '2 Cool 4
+          Skool'.
+        </p>
 
-      <p>
-        Their musical style incorporates a wide range of genres (pop, hip-hop,
-        R&B, dance/electronic etc), while their lyrics focus on social issues,
-        mental health and the youth. The co-produce and co-write most of their
-        songs. By 2022 the group has uncountable accolades from repeated
-        number-one songs in charts around the world, to concequent sold-out
-        concerts, numerous awards and brands ambassadoring to addressing,
-        thrice, the UN General Assmbly and, most importantly, having the most
-        loyal, dedicated, proud and enormous fanbase, known as
-        <strong>A R M Y</strong> (Adorable Representative M.C. for Youth.)
-      </p>
+        <p>
+          Their musical style incorporates a wide range of genres (pop, hip-hop,
+          R&B, dance/electronic etc), while their lyrics focus on social issues,
+          mental health and the youth. The co-produce and co-write most of their
+          songs. By 2022 the group has uncountable accolades from repeated
+          number-one songs in charts around the world, to concequent sold-out
+          concerts, numerous awards and brands ambassadoring to addressing,
+          thrice, the UN General Assmbly and, most importantly, having the most
+          loyal, dedicated, proud and enormous fanbase, known as
+          <strong>A R M Y</strong> (Adorable Representative M.C. for Youth.)
+        </p>
 
-      <p>
-        They are currently on pause of their group activities and focusing on
-        their individual projects, while Jin has already enlisted for the
-        mandatory South Korean military service, and J-Hope will be the next one
-        to follow shortly.
-      </p>
+        <p>
+          They are currently on pause of their group activities and focusing on
+          their individual projects, while Jin has already enlisted for the
+          mandatory South Korean military service, and J-Hope will be the next
+          one to follow shortly.
+        </p>
 
-      <p>
-        Their much waited reunion is foreseen for 2025, and, we, ARMYs, can't
-        wait, right?!!!!!!
-      </p>
-    </section>
+        <p>
+          Their much waited reunion is foreseen for 2025, and, we, ARMYs, can't
+          wait, right?!!!!!!
+        </p>
+      </section>
+      <section class="profiles">
+        <div class="profiles-title">
+          <h3>member's profiles</h3>
+          <span class="divider"></span>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
