--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300;700&family=Jura&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300;700&family=Poppins:wght@200;700&display=swap"
       rel="stylesheet"
+    />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
     />
 
     <link rel="stylesheet" href="src/styles.css" type="text/css" />
@@ -18,9 +25,7 @@
   </head>
   <body>
     <header>
-      <div class="banner-top">
-        <img src="img/bts_banner.jfif" alt="BTS group photo banner" />
-      </div>
+      <div class="banner-top"></div>
       <h1>BTS</h1>
       <h2>방탄소년단</h2>
     </header>
@@ -68,8 +73,17 @@
       </section>
       <section class="profiles">
         <div class="profiles-title">
-          <h3>member's profiles</h3>
+          <h3>members' profiles</h3>
           <span class="divider"></span>
+        </div>
+        <div class="row align-items-center">
+          <div class="col">photo1</div>
+          <div class="col">photo2</div>
+          <div class="col">photo3</div>
+          <div class="col">photo4</div>
+          <div class="col">photo5</div>
+          <div class="col">photo6</div>
+          <div class="col">photo7</div>
         </div>
       </section>
     </div>
