Adding members' photos

--- a/index.html
+++ b/index.html
@@ -76,14 +76,57 @@
           <h3>members' profiles</h3>
           <span class="divider"></span>
         </div>
-        <div class="row align-items-center">
-          <div class="col">photo1</div>
-          <div class="col">photo2</div>
-          <div class="col">photo3</div>
-          <div class="col">photo4</div>
-          <div class="col">photo5</div>
-          <div class="col">photo6</div>
-          <div class="col">photo7</div>
+        <div class="row m-3 gx-3">
+          <div class="col">
+            <img
+              src="./img/rm.jpg"
+              alt="Member's stage name: RM"
+              class="photo-rm"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="./img/jin.jpg"
+              alt="Member's stage name: Jin"
+              class="photo-jin"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="./img/suga.jpg"
+              alt="Member's stage name: Suga"
+              class="photo-suga"
+            />
+          </div>
+
+          <div class="col">
+            <img
+              src="./img/hobi.jpg"
+              alt="Member's stage name: J-Hope"
+              class="photo-hobi"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="./img/jimin.jpg"
+              alt="Member's stage name: Jimin"
+              class="photo-jimin"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="./img/v.jpg"
+              alt="Member's stage name: V"
+              class="photo-v"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="./img/jk.jpg"
+              alt="Member's stage name: JungKook"
+              class="photo-jk"
+            />
+          </div>
         </div>
       </section>
     </div>
