Cursor change, images updates

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           songs. By 2022 the group has uncountable accolades from repeated
           number-one songs in charts around the world, to concequent sold-out
           concerts, numerous awards and brands ambassadoring to addressing,
-          thrice, the UN General Assmbly and, most importantly, having the most
-          loyal, dedicated, proud and enormous fanbase, known as
+          thrice, the United Nations General Assembly and, most importantly,
+          having the most loyal, dedicated, proud and enormous fanbase, known as
           <strong>A R M Y</strong> (Adorable Representative M.C. for Youth.)
         </p>
 
@@ -130,5 +130,6 @@
         </div>
       </section>
     </div>
+    <footer>GitHub open source code by IfiZamb</footer>
   </body>
 </html>
