First profile, bootstrap resetting

--- a/index.html
+++ b/index.html
@@ -76,13 +76,23 @@
           <h3>members' profiles</h3>
           <span class="divider"></span>
         </div>
-        <div class="row m-3 gx-3">
+        <div class="row cols-sm-1 cols-m-7 m-3 gx-2">
           <div class="col">
             <img
               src="./img/rm.jpg"
               alt="Member's stage name: RM"
               class="photo-rm"
             />
+            <div class="text-rm">
+              <ul>
+                <li>Stage Name: RM</li>
+                <li>Birth Name: Kim Nam Joon (김남준)</li>
+                <li>Position: Leader, Main Rapper</li>
+                <li>Birthday: September 12, 1994</li>
+                <li>Height: 181 cm</li>
+                <li>Instagram: @rkive</li>
+              </ul>
+            </div>
           </div>
           <div class="col">
             <img
