Adding profiles, adjusting bootstrap

--- a/index.html
+++ b/index.html
@@ -71,72 +71,305 @@
           wait, right?!!!!!!
         </p>
       </section>
+
       <section class="profiles">
         <div class="profiles-title">
           <h3>members' profiles</h3>
           <span class="divider"></span>
         </div>
-        <div class="row cols-sm-1 cols-m-7 m-3 gx-2">
-          <div class="col">
+
+        <div class="row cols-sm-1 cols-md-7 m-3 gx-2">
+          <div class="col text-center">
             <img
               src="./img/rm.jpg"
               alt="Member's stage name: RM"
               class="photo-rm"
             />
-            <div class="text-rm">
-              <ul>
-                <li>Stage Name: RM</li>
-                <li>Birth Name: Kim Nam Joon (김남준)</li>
-                <li>Position: Leader, Main Rapper</li>
-                <li>Birthday: September 12, 1994</li>
-                <li>Height: 181 cm</li>
-                <li>Instagram: @rkive</li>
-              </ul>
-            </div>
+            <ul class="profile-rm">
+              <li>
+                <u>Stage Name</u>
+                <br />
+                <strong>RM (아르엠)</strong>
+              </li>
+              <li>
+                <u>Birth Name</u>
+                <br />
+                <strong>Kim Nam Joon (김남준)</strong>
+              </li>
+              <li>
+                <u>Position</u>
+                <br />
+                <strong>Leader, Main Rapper</strong>
+              </li>
+              <li>
+                <u>Birthday</u>
+                <br />
+                <strong>September 12, 1994</strong>
+              </li>
+              <li>
+                <u>Height</u>
+                <br />
+                <strong>181 cm</strong>
+              </li>
+              <li>
+                <u>Instagram</u>
+                <br />
+                <strong>@rkive</strong>
+              </li>
+            </ul>
           </div>
-          <div class="col">
+
+          <div class="col text-center">
             <img
               src="./img/jin.jpg"
               alt="Member's stage name: Jin"
               class="photo-jin"
             />
+            <ul class="profile-jin">
+              <li>
+                <u>Stage Name</u>
+                <br />
+                <strong>Jin (진)</strong>
+              </li>
+              <li>
+                <u>Birth Name</u>
+                <br />
+                <strong>Kim Seok Jin (김석진)</strong>
+              </li>
+              <li>
+                <u>Position</u>
+                <br />
+                <strong>Sub Vocalist, Visual</strong>
+              </li>
+              <li>
+                <u>Birthday</u>
+                <br />
+                <strong>December 4, 1992</strong>
+              </li>
+              <li>
+                <u>Height</u>
+                <br />
+                <strong>179 cm</strong>
+              </li>
+              <li>
+                <u>Instagram</u>
+                <br />
+                <strong>@jin</strong>
+              </li>
+            </ul>
           </div>
-          <div class="col">
+          <div class="col text-center">
             <img
               src="./img/suga.jpg"
               alt="Member's stage name: Suga"
               class="photo-suga"
             />
+            <ul class="profile-suga">
+              <li>
+                <u>Stage Name</u>
+                <br />
+                <strong>Suga (슈가)</strong>
+              </li>
+              <li>
+                <u>Birth Name</u>
+                <br />
+                <strong>Min Yoon Gi (민윤기)</strong>
+              </li>
+              <li>
+                <u>Position</u>
+                <br />
+                <strong>Lead Rapper</strong>
+              </li>
+              <li>
+                <u>Birthday</u>
+                <br />
+                <strong>March 9, 1993</strong>
+              </li>
+              <li>
+                <u>Height</u>
+                <br />
+                <strong>174 cm</strong>
+              </li>
+              <li>
+                <u>Instagram</u>
+                <br />
+                <strong>@agustd</strong>
+              </li>
+            </ul>
           </div>
 
-          <div class="col">
+          <div class="col text-center">
             <img
               src="./img/hobi.jpg"
               alt="Member's stage name: J-Hope"
               class="photo-hobi"
             />
+            <ul class="profile-hobi">
+              <li>
+                <u>Stage Name</u>
+                <br />
+                <strong>J-Hope (제이홉)</strong>
+              </li>
+              <li>
+                <u>Birth Name</u>
+                <br />
+                <strong>Jung Ho Seok (정호석)</strong>
+              </li>
+              <li>
+                <u>Position</u>
+                <br />
+                <strong>Main Dancer, Sub Rapper, Sub Vocalist</strong>
+              </li>
+              <li>
+                <u>Birthday</u>
+                <br />
+                <strong>February 18, 1994</strong>
+              </li>
+              <li>
+                <u>Height</u>
+                <br />
+                <strong>177 cm</strong>
+              </li>
+              <li>
+                <u>Instagram</u>
+                <br />
+                <strong>@uarmyhope</strong>
+              </li>
+            </ul>
           </div>
-          <div class="col">
+
+          <div class="col text-center">
             <img
               src="./img/jimin.jpg"
               alt="Member's stage name: Jimin"
               class="photo-jimin"
             />
+            <ul class="profile-jimin">
+              <li>
+                <u>Stage Name</u>
+                <br />
+                <strong>Jimin (지민)</strong>
+              </li>
+              <li>
+                <u>Birth Name</u>
+                <br />
+                <strong>Park Ji Min (박지민)</strong>
+              </li>
+              <li>
+                <u>Position</u>
+                <br />
+                <strong>Main Dancer, Lead Vocalist</strong>
+              </li>
+              <li>
+                <u>Birthday</u>
+                <br />
+                <strong>October 13, 1995</strong>
+              </li>
+              <li>
+                <u>Height</u>
+                <br />
+                <strong>174 cm</strong>
+              </li>
+              <li>
+                <u>Instagram</u>
+                <br />
+                <strong>@j.m</strong>
+              </li>
+            </ul>
           </div>
-          <div class="col">
+
+          <div class="col text-center">
             <img
               src="./img/v.jpg"
               alt="Member's stage name: V"
               class="photo-v"
             />
+            <ul class="profile-v">
+              <li>
+                <u>Stage Name</u>
+                <br />
+                <strong>V (뷔)</strong>
+              </li>
+              <li>
+                <u>Birth Name</u>
+                <br />
+                <strong>Kim Tae Hyeong (김태형)</strong>
+              </li>
+              <li>
+                <u>Position</u>
+                <br />
+                <strong>Sub Vocalist, Visual</strong>
+              </li>
+              <li>
+                <u>Birthday</u>
+                <br />
+                <strong>December 30, 1995</strong>
+              </li>
+              <li>
+                <u>Height</u>
+                <br />
+                <strong>179 cm</strong>
+              </li>
+              <li>
+                <u>Instagram</u>
+                <br />
+                <strong>@thv</strong>
+              </li>
+            </ul>
           </div>
-          <div class="col">
+
+          <div class="col text-center">
             <img
               src="./img/jk.jpg"
               alt="Member's stage name: JungKook"
               class="photo-jk"
             />
+            <ul class="profile-jk">
+              <li>
+                <u>Stage Name</u>
+                <br />
+                <strong>Jungkook (정국)</strong>
+              </li>
+              <li>
+                <u>Birth Name</u>
+                <br />
+                <strong>Jeon Jeong Kook (전정국)</strong>
+              </li>
+              <li>
+                <u>Position</u>
+                <br />
+                <strong>Main Vocalist, Lead Dancer, Maknae</strong>
+              </li>
+              <li>
+                <u>Birthday</u>
+                <br />
+                <strong>September 1, 1997</strong>
+              </li>
+              <li>
+                <u>Height</u>
+                <br />
+                <strong>179 cm</strong>
+              </li>
+              <li>
+                <u>Instagram</u>
+                <br />
+                <strong>-</strong>
+              </li>
+            </ul>
           </div>
+        </div>
+      </section>
+
+      <section class="voting">
+        <div class="voting-bias">
+          <h3>vote for your bias</h3>
+          <span class="divider"></span>
+        </div>
+      </section>
+      <section class="connect">
+        <div class="connect-with-bts">
+          <h3>connect with BTS</h3>
+          <span class="divider"></span>
         </div>
       </section>
     </div>
