--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <section class="profiles">
         <div class="profiles-title">
-          <h3>members' profiles</h3>
+          <h3>members</h3>
           <span class="divider"></span>
         </div>
 
