Building communication section

--- a/index.html
+++ b/index.html
@@ -371,6 +371,72 @@
           <h3>connect with BTS</h3>
           <span class="divider"></span>
         </div>
+        <div class="row cols-sm-7 g-3 text-center">
+          <div class="col">
+            <a href="https://ibighit.com/bts/kor/" target="_blank">
+              <img
+                src="./img/icons8-bts-logo.png"
+                alt="BTS bighit official website"
+            /></a>
+          </div>
+          <div class="col">
+            <a href="https://weverse.io/bts/feed" target="_blank">
+              <img
+                src="./img/icons8-weverse.png"
+                alt="BTS weverse website"
+                class="weverse"
+            /></a>
+          </div>
+          <div class="col">
+            <a
+              href="https://www.youtube.com/channel/UCLkAepWjdylmXSltofFvsYQ"
+              target="_blank"
+            >
+              <img
+                src="./img/icons8-youtube.png"
+                alt="BTS youtube channel"
+                class="youtube"
+            /></a>
+          </div>
+          <div class="col">
+            <a
+              href="https://open.spotify.com/artist/3Nrfpe0tUJi4K4DXYWgMUX"
+              target="_blank"
+            >
+              <img
+                src="./img/icons8-spotify.png"
+                alt="BTS spotify channel"
+                class="spotify"
+            /></a>
+          </div>
+          <div class="col">
+            <a href="https://twitter.com/BTS_bighit" target="_blank">
+              <img
+                src="./img/icons8-twitter.png"
+                alt="BTS twitter account"
+                class="twitter"
+            /></a>
+          </div>
+          <div class="col">
+            <a
+              href="https://www.tiktok.com/@bts_official_bighit?lang=en"
+              target="_blank"
+            >
+              <img
+                src="./img/icons8-tiktok.png"
+                alt="BTS TikTok account"
+                class="tiktok"
+            /></a>
+          </div>
+          <div class="col">
+            <a href="https://www.facebook.com/bangtan.official" target="_blank">
+              <img
+                src="./img/icons8-facebook.png"
+                alt="BTS Facebook account"
+                class="facebook"
+            /></a>
+          </div>
+        </div>
       </section>
     </div>
     <footer>GitHub open source code by IfiZamb</footer>
