Fixing photo shadows and transitions

--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
               <img
                 src="./img/icons8-bts-logo.png"
                 alt="BTS bighit official website"
+                class="bighit"
             /></a>
           </div>
           <div class="col">
