Updating elements'shadows

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
             <img
               src="./img/rm.jpg"
               alt="Member's stage name: RM"
-              class="photo-rm"
+              class="photo"
             />
-            <ul class="profile-rm">
+            <ul class="profile">
               <li>
                 <u>Stage Name</u>
                 <br />
@@ -123,9 +123,9 @@
             <img
               src="./img/jin.jpg"
               alt="Member's stage name: Jin"
-              class="photo-jin"
+              class="photo"
             />
-            <ul class="profile-jin">
+            <ul class="profile">
               <li>
                 <u>Stage Name</u>
                 <br />
@@ -162,9 +162,9 @@
             <img
               src="./img/suga.jpg"
               alt="Member's stage name: Suga"
-              class="photo-suga"
+              class="photo"
             />
-            <ul class="profile-suga">
+            <ul class="profile">
               <li>
                 <u>Stage Name</u>
                 <br />
@@ -202,9 +202,9 @@
             <img
               src="./img/hobi.jpg"
               alt="Member's stage name: J-Hope"
-              class="photo-hobi"
+              class="photo"
             />
-            <ul class="profile-hobi">
+            <ul class="profile">
               <li>
                 <u>Stage Name</u>
                 <br />
@@ -242,9 +242,9 @@
             <img
               src="./img/jimin.jpg"
               alt="Member's stage name: Jimin"
-              class="photo-jimin"
+              class="photo"
             />
-            <ul class="profile-jimin">
+            <ul class="profile">
               <li>
                 <u>Stage Name</u>
                 <br />
@@ -279,12 +279,8 @@
           </div>
 
           <div class="col text-center">
-            <img
-              src="./img/v.jpg"
-              alt="Member's stage name: V"
-              class="photo-v"
-            />
-            <ul class="profile-v">
+            <img src="./img/v.jpg" alt="Member's stage name: V" class="photo" />
+            <ul class="profile">
               <li>
                 <u>Stage Name</u>
                 <br />
@@ -322,9 +318,9 @@
             <img
               src="./img/jk.jpg"
               alt="Member's stage name: JungKook"
-              class="photo-jk"
+              class="photo"
             />
-            <ul class="profile-jk">
+            <ul class="profile">
               <li>
                 <u>Stage Name</u>
                 <br />
@@ -333,7 +329,7 @@
               <li>
                 <u>Birth Name</u>
                 <br />
-                <strong>Jeon Jeong Kook (전정국)</strong>
+                <strong>Jeon Jung Kook (전정국)</strong>
               </li>
               <li>
                 <u>Position</u>
@@ -353,7 +349,7 @@
               <li>
                 <u>Instagram</u>
                 <br />
-                <strong>-</strong>
+                <strong>-😕</strong>
               </li>
             </ul>
           </div>
