updating css properties, class names

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300;700&family=Poppins:wght@200;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
 
@@ -35,6 +35,7 @@
           <h3>intro</h3>
           <span class="divider"></span>
         </div>
+
         <p>
           <strong>BTS</strong> (Korean: 방탄소년단; Romanization: Bangtan
           Sonyeondan; lit. Bulletproof Boy Scouts), is a South Korean boy band
@@ -361,6 +362,33 @@
           <h3>vote for your bias</h3>
           <span class="divider"></span>
         </div>
+        <div class="poll">
+          <script type="text/javascript">
+            (function (d, s, id, u) {
+              if (d.getElementById(id)) return;
+              var js,
+                sjs = d.getElementsByTagName(s)[0],
+                t = Math.floor(new Date().getTime() / 1000000);
+              js = d.createElement(s);
+              js.id = id;
+              js.async = 1;
+              js.src = u + "?" + t;
+              sjs.parentNode.insertBefore(js, sjs);
+            })(
+              document,
+              "script",
+              "os-widget-jssdk",
+              "https://www.opinionstage.com/assets/loader.js"
+            );
+          </script>
+          <div
+            id="os-widget-1121161"
+            class="os_poll"
+            data-path="/polls/2894158"
+            data-of="ifigeneia"
+            data-opinionstage-widget="418ab243-773a-4720-a8f4-166aef624417"
+          ></div>
+        </div>
       </section>
       <section class="connect">
         <div class="connect-with-bts">
@@ -373,7 +401,7 @@
               <img
                 src="./img/icons8-bts-logo.png"
                 alt="BTS bighit official website"
-                class="bighit"
+                class="connect-icon"
             /></a>
           </div>
           <div class="col">
@@ -381,7 +409,7 @@
               <img
                 src="./img/icons8-weverse.png"
                 alt="BTS weverse website"
-                class="weverse"
+                class="connect-icon"
             /></a>
           </div>
           <div class="col">
@@ -392,7 +420,7 @@
               <img
                 src="./img/icons8-youtube.png"
                 alt="BTS youtube channel"
-                class="youtube"
+                class="connect-icon"
             /></a>
           </div>
           <div class="col">
@@ -403,7 +431,7 @@
               <img
                 src="./img/icons8-spotify.png"
                 alt="BTS spotify channel"
-                class="spotify"
+                class="connect-icon"
             /></a>
           </div>
           <div class="col">
@@ -411,7 +439,7 @@
               <img
                 src="./img/icons8-twitter.png"
                 alt="BTS twitter account"
-                class="twitter"
+                class="connect-icon"
             /></a>
           </div>
           <div class="col">
@@ -422,7 +450,7 @@
               <img
                 src="./img/icons8-tiktok.png"
                 alt="BTS TikTok account"
-                class="tiktok"
+                class="connect-icon"
             /></a>
           </div>
           <div class="col">
@@ -430,7 +458,7 @@
               <img
                 src="./img/icons8-facebook.png"
                 alt="BTS Facebook account"
-                class="facebook"
+                class="connect-icon"
             /></a>
           </div>
         </div>
