--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <div class="card-body">
                   <h4 class="card-title">What is their musical style?</h4>
                   <p class="card-text p-2 mx-2 mt-3">
-                    With supporting some more text below as a natural lead-in to
-                    additional content.
+                    Their musical style incorporates a wide range of genres pop,
+                    hip-hop, R&B, dance/electronic, latin pop, urban etc
                   </p>
                   <a href="#" class="btn btn-outline-secondary">Outline</a>
                 </div>
