Creating intro cards, changing some shadow properties

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             <div class="col-4 p-2">
               <div class="card p-2">
                 <div class="card-body">
-                  <h4 class="card-title">What BTS stands for?</h4>
+                  <h4 class="card-title">Their name...</h4>
                   <p class="card-text p-2 mx-2 mt-3">
                     <strong>BTS</strong> (Korean: 방탄소년단; Romanization:
                     Bangtan Sonyeondan; lit. Bulletproof Boy Scouts), is a South
-                    Korean boy band of 7 members consisting of
+                    Korean boy band consisting of 7 membersm namely:
                     <strong>RM</strong>, <strong>Jin</strong>,
                     <strong>Suga</strong>, <strong>J-Hope</strong>,
                     <strong>Jimin</strong>, <strong>V</strong> and
@@ -63,7 +63,7 @@
             <div class="col-4 p-2">
               <div class="card p-2">
                 <div class="card-body">
-                  <h4 class="card-title">When did they debut?</h4>
+                  <h4 class="card-title">Their debut...</h4>
                   <p class="card-text p-2 mx-2 mt-3">
                     They debuted on <strong>June 13, 2013</strong> under Big Hit
                     Music (currently part of HYBE Labels) with the lead single
@@ -75,7 +75,7 @@
             <div class="col-4 p-2">
               <div class="card p-2">
                 <div class="card-body">
-                  <h4 class="card-title">What is their musical style?</h4>
+                  <h4 class="card-title">Their music...</h4>
                   <p class="card-text p-2 mx-2 mt-3">
                     Their musical style incorporates a wide range of genres pop,
                     hip-hop, R&B, dance/electronic, latin pop, urban etc
